# O3DEPopcornFXPlugin

./: AssetProcessorGemConfig.ini  CMakeLists.txt  LICENSE.md  README.md  gem.json
.github/workflows/: draft-release.yml
Assets/: PopcornFX_Dependencies.xml  pkfxprofile.inputbindings  popcornfx_asset_files.cmake  scriptcanvas_en_us.ts  seedList.seed
Assets/Passes/: DistortionAccumulation.pass  DistortionPassRequest.azasset  DistortionPostProcess.pass  PKPassTemplates.azasset
Assets/passes/: DistortionParent.pass  PKPassTemplates.azasset
Assets/samples/: MonkeyTest.lua
Assets/shaders/Billboard/Default/: Billboard.azsl  Billboard.shader  Billboard.shadervariantlist  BillboardDistortion.azsl  BillboardDistortion.shader  BillboardDistortion.shadervariantlist  BillboardLit.azsl  BillboardLit.shader  BillboardLit.shadervariantlist
Assets/shaders/Billboard/Legacy/: BillboardLit_Legacy.azsl  BillboardLit_Legacy.shader  BillboardLit_Legacy.shadervariantlist  Billboard_Legacy.azsl  Billboard_Legacy.shader  Billboard_Legacy.shadervariantlist
Assets/shaders/Common/: BillboardSrg.azsli  ComputeBillboardVertex.azsli  LightingHelper.azsli  MaterialSrg.azsli  MeshSrg.azsli  PopcornOptions.azsli  RendererFeatures.azsli  RendererSrg.azsli  RibbonSrg.azsli
Assets/shaders/Depth/Basic/: DepthPass.azsl  DepthPass.shader  DepthPassTransparentMax.shader  DepthPassTransparentMin.shader
Assets/shaders/Depth/Billboard/: DepthPass.azsl  DepthPassBillboard.azsl  DepthPassBillboard.shader  DepthPassBillboard.shadervariantlist  DepthPassTransparentMaxBillboard.shader  DepthPassTransparentMaxBillboard.shadervariantlist  DepthPassTransparentMinBillboard.shader  DepthPassTransparentMinBillboard.shadervariantlist
Assets/shaders/Depth/Mesh/: DepthPassMesh.azsl  DepthPassMesh.shader  DepthPassTransparentMaxMesh.shader  DepthPassTransparentMinMesh.shader
Assets/shaders/Mesh/Default/: Mesh.azsl  Mesh.shader  Mesh.shadervariantlist  MeshLit.azsl  MeshLit.shader  MeshLit.shadervariantlist
Assets/shaders/Mesh/Legacy/: MeshLit_Legacy.azsl  MeshLit_Legacy.shader  MeshLit_Legacy.shadervariantlist  Mesh_Legacy.azsl  Mesh_Legacy.shader  Mesh_Legacy.shadervariantlist
Assets/shaders/PostProcess/: DistortionPostProcess.azsl  DistortionPostProcess.shader
Assets/shaders/Ribbon/Default/: Ribbon.azsl  Ribbon.shader  Ribbon.shadervariantlist  RibbonAtlasBlend.shader  RibbonAtlasBlend.shadervariantlist  RibbonCorrectDeformation.shader  RibbonCorrectDeformation.shadervariantlist  RibbonDistortion.azsl  RibbonDistortion.shader  RibbonLit.azsl  RibbonLit.shader  RibbonLit.shadervariantlist  RibbonLitAtlasBlend.shader  RibbonLitAtlasBlend.shadervariantlist  RibbonLitCorrectDeformation.shader  RibbonLitCorrectDeformation.shadervariantlist
Assets/shaders/Ribbon/Legacy/: RibbonAtlasBlend_Legacy.shader  RibbonCorrectDeformation_Legacy.shader  RibbonLitAtlasBlend_Legacy.shader  RibbonLitCorrectDeformation_Legacy.shader  RibbonLit_Legacy.azsl  RibbonLit_Legacy.shader  Ribbon_Legacy.azsl  Ribbon_Legacy.shader
Code/: CMakeLists.txt  popcornfx_api_files.cmake  popcornfx_autogen_files.cmake  popcornfx_builder_files.cmake  popcornfx_editor_files.cmake  popcornfx_files.cmake  popcornfx_previewer_files.cmake  popcornfx_shared_files.cmake
Code/Include/PopcornFX/: PopcornFXBus.h
Code/Platform/: PopcornFXPackages.cmake
Code/Platform/Android/: PAL_android.cmake
Code/Platform/Linux/: PAL_linux.cmake  platform_linux.cmake
Code/Platform/Mac/: PAL_mac.cmake
Code/Platform/Windows/: PAL_windows.cmake  platform_windows.cmake
Code/Platform/iOS/: PAL_ios.cmake
Code/Source/: PopcornFXModule.cpp  PopcornFXPreviewersSystemComponent.cpp  PopcornFXPreviewersSystemComponent.h  PopcornFXSystemComponent.cpp  PopcornFXSystemComponent.h  PopcornFX_precompiled.h
Code/Source/Asset/: PopcornFXAsset.h  PopcornFXAssetBuilderComponent.cpp  PopcornFXAssetBuilderComponent.h  PopcornFXAssetBuilderWorker.cpp  PopcornFXAssetBuilderWorker.h  PopcornFXAssetHandler.cpp  PopcornFXAssetHandler.h
Code/Source/Components/Attributes/: PopcornFXAttributeList.cpp  PopcornFXAttributeList.h  PopcornFXEditorAttributeList.cpp  PopcornFXEditorAttributeList.h
Code/Source/Components/Emitter/: PopcornFXEmitter.cpp  PopcornFXEmitter.h  PopcornFXEmitterEditorComponent.cpp  PopcornFXEmitterEditorComponent.h  PopcornFXEmitterGameComponent.cpp  PopcornFXEmitterGameComponent.h  PopcornFXEmitterRuntime.cpp  PopcornFXEmitterRuntime.h
Code/Source/Components/Helpers/: PopcornFXHelperLoopEmitterEditorComponent.cpp  PopcornFXHelperLoopEmitterEditorComponent.h  PopcornFXHelperLoopEmitterGameComponent.cpp  PopcornFXHelperLoopEmitterGameComponent.h  PopcornFXHelperProfilerEditorComponent.cpp  PopcornFXHelperProfilerEditorComponent.h  PopcornFXHelperProfilerGameComponent.cpp  PopcornFXHelperProfilerGameComponent.h
Code/Source/Components/Samplers/: PopcornFXSamplerAnimTrack.cpp  PopcornFXSamplerAnimTrack.h  PopcornFXSamplerAnimTrackEditorComponent.cpp  PopcornFXSamplerAnimTrackGameComponent.h  (+22 more)
Code/Source/Integration/: PopcornFXIntegration.cpp  PopcornFXIntegration.h  PopcornFXIntegrationBus.h  PopcornFXStartUpdate.cpp  PopcornFXStartUpdate.h  PopcornFXStopUpdate.cpp  PopcornFXStopUpdate.h  PopcornFXUtils.h
Code/Source/Previewer/: PopcornFXEffectPreviewer.cpp  PopcornFXEffectPreviewer.h  PopcornFXEffectPreviewer.ui  PopcornFXEffectPreviewerFactory.cpp  PopcornFXEffectPreviewerFactory.h
Code/Source/ScriptCanvas/: PopcornFXBroadcastNodeable.ScriptCanvasNodeable.xml  PopcornFXBroadcastNodeable.cpp  PopcornFXBroadcastNodeable.generated.cpp  PopcornFXBroadcastNodeable.generated.h  PopcornFXBroadcastNodeable.h  PopcornFXExtractPayloadNodeable.ScriptCanvasNodeable.xml  PopcornFXExtractPayloadNodeable.cpp  PopcornFXExtractPayloadNodeable.generated.cpp  PopcornFXExtractPayloadNodeable.generated.h  PopcornFXExtractPayloadNodeable.h  PopcornFXExtractPayloadNodes.h  PopcornFXLibrary.cpp  PopcornFXLibrary.h
Code/Tests/: PopcornFXTest.cpp
Platform/Linux/: linux_gem.cmake
PopcornScript/: DistortionPass.data  PatchProject.py
Registry/: AssetProcessorPlatformConfig.setreg
(+85 files in other folders)
